# cli

./: .gitignore  Cargo.toml  build.rs  flake.nix
src/: config.rs  login.rs  main.rs  request.rs  submit.rs  update.rs  version.rs
