[package]
name = "mm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.1.2"
mm-engine = { git = "https://github.com/mechmania/engine.git", version = "0.1.0" }
reqwest = { version = "0.12.23", features = ["json"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
